...
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dictRecycleView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/dictTextInput"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dictTitleText"
                app:layout_constraintVertical_bias="1.0" />

...
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/dict_hintText"
                android:inputType="text"
                android:textSize="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/dictSearchButton"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/dictSearchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
