<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize">

    <!-- Toolbar -->

...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/main_bk" />

    <Button
        android:id="@+id/button2"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="48dp"
        android:text="@string/button_message2"
        app:layout_constraintEnd_toEndOf="parent"
...
