<resources>
    <string name="app_name">AllInOne</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="button_message1">Sunrise Sunset Lookup</string>
    <string name="button_message2">Recipe Search</string>
    <string name="button_message3">Dictionary API </string>
    <string name="button_message4">Deezer Song Search API </string>
    <string name="Lookup">lookup</string>
    <string name="Save_location">Save Location</string>
    <string name="Delete">Delete</string>
    <string name="Favorite">Favorite</string>
    <string name="latitudeEditText">Latitude</string>
    <string name="LongitudeEditText">Longitude</string>

    <!--   Dict Strings -->

    <string name="dict_titleText">Dictionary</string>
    <string name="dict_hintText">Type a word you want to look up</string>
    <string name="dict_searchTitle">Search</string>
    <string name="dict_frgTitle">Word</string>
    <string name="dict_summaryDetail">Definitions</string>
    <string name="dict_sampleList">Definition List</string>
    <string name="dict_favItem">Saved Words</string>
    <string name="dict_deleteItem">Remove Word</string>
    <string name="dict_addItem">Save Word</string>
    <string name="dict_backToMainItem">Back to Home</string>
    <string name="dict_helpItem">Need Help?</string>
    <string name="dict_aboutItem">About This App</string>
    <string name="dict_notFoundToast">Could not find the word.Try again!</string>
    <string name="dict_notAvailableToast">This word is not available right now.</string>
    <string name="dict_noBrowserToast">No app available to open this URL.</string>
    <string name="dict_insertSucceedToast">Word successfully saved to your favorites!</string>
    <string name="dict_alreadyInToast">The word is already in your favorites. Try saving a different word!</string>
    <string name="dict_noSelectedToast">Please select a word first.</string>
    <string name="dict_deleteAlert">Are you sure you want to remove this word from your saved list?</string>
    <string name="dict_yes">Yes</string>
    <string name="dict_no">No</string>
    <string name="dict_undo">Undo</string>
    <string name="dict_deletedSnackbar">You deleted the word.</string>
    <string name="dict_aboutToast">This dictionary app was created by Feng Qi. For more info, visit our website!</string>
    <string name="dict_helpTitle">How to Use:</string>
    <string name="dict_ok">OK</string>
    <string name="dict_helpAlert">Instructions:\n
                                  1. User can enter a search term in  EditText field.\n
                                  2. Press the Search button to find meanings.\n
                                  3. Tap any result to see more details about it.\n
                                  4. Like a word? Hit the Save icon to keep it for later.\n
                                  5. View all your saved words by pressing the Saved button.\n
                                  6. Want to clear up space? Just choose a word and hit the Delete icon.\n
                                  7. Need more help? Our support team is here for you.\n
                                \u2600 SunSeeker\n\n
                                \uD83C\uDFB5 DeezerDiscover\n\n
                                \uD83D\uDCD5 RecipeRover\n\n
                                \u2764 Saved Words\n\n
                                \uD83D\uDCE5 Save Word\n\n
                                \uD83D\uDDD1 ️Delete Word\n\n
</string>

    <!-- song-->
    <string name="yxeditSearchName">Enter word to search</string>
    <string name="yxSearchBtNname">Seach</string>
    <string name="yxSaveBtnName">See Saved Term</string>
    <string name="Save_name">Saved Term</string>
    <string name="About_name">About</string>
    <string name="How_to_use_name">How to use</string>

    <string name="goToHomePage">Go to Home Page</string>
    <string name="goToSongPage">Go to Song Page</string>
    <string name="goToRecipePage">Go to Recipe Page</string>
    <string name="goToSunPage">Go to Sun Page</string>
    <string name="goToDictionaryPage">Go to Dictionary</string>

    <string name="sunApp">Sunrise ad Sunset</string>
    <string name="recipeApp">Recipe Search</string>
    <string name="dictionaryApp">Dictionary API</string>
    <string name="deezerApp">Deezer Song</string>
    <string name="sumAppTitle">CST2355 AllInOne</string>
    <string name="goingTosunApp">Going to Sunrise ad Sunset</string>
    <string name="goingTorecipeApp">Going to Recipe Search</string>
    <string name="goingTodictionaryApp">Going to Dictionary API</string>
    <string name="goingTodeezerApp">Going to Deezer Song</string>
    <string name="SongAbout">This application is the final project of our class CST2355</string>
    <string name="SongAboutuse">Instructions on how to use the interface:
        \n1. Enter a search term in the middle of the provided EditText.
        \n2. Click the Search button to retrieve data from the Deezer Song API.
        \n3. Click the Favorite List button to access the favorite list which song you saved before.
        \n4. Click on a song to see detailed information in a separate fragment.
        \n5. Click the Save to list button to add a song to the favorite list in the fragment.
        \n6. To delete a term, select it and choose the Delete choice from the favorite list.
        \n7. The toolbar provide access to Sun page, Receipe page, Dictionary page and Song page.
        \n8. Each page click the return will back to the previous page.
        \n9. For more help, you can contact support.</string>

    <string name="songSave">Save this item</string>
    <string name="songDelete">Delete this item</string>

    <string name="dict_saved">Word saved successfully</string>
    <string name="dict_deleted">Word deleted successfully</string>

    <string name="songsearch">Searching for the artist...</string>
    <string name="question">Question:</string>
    <string name="goToHomeToast">Going to Saved term page...</string>
    <string name="goToHomeSnack">You return to home page.</string>
    <string name="undo">Undo </string>
    <string name="goToSaveList">You are going to favorite list.</string>
    <string name="version">Version 1.0, created by Zhaoguo Han </string>
    <string name="addFavorites">Add song to favorites</string>
    <string name="confirm">Yes</string>
    <string name="reject">No</string>
    <string name="addQuestion">Add to favorites?</string>
    <string name="addTitle">Add to favorites</string>
    <string name="favoritesAdded"> added to favorite list</string>
    <string name="songInFavorties">Song already in favorites</string>
    <string name="deleteQuestion">Do you want to delete this song?</string>
    <string name="deleteTitle">Delete</string>
    <string name="deletedSong">You deleted </string>
    <string name="returnHomeQuestion">Do you want to return the home page:</string>
    <string name="title">Deezer Song</string>
    <string name="favButton">Favorite List</string>
    <string name="saveToList">Save to List</string>
    <string name="songname">Song Name</string>
    <string name="durationnumber">Duration</string>
    <string name="albumname">Album Name</string>
    <string name="returnStep">Return</string>
    <string name="tianjiaosaveButton">Saved list</string>
    <string name="inqureSongAction">Do you want see the song details or delete this song?</string>


    <!--The following strings belong to Sun Activity-->

    <string name="sun_help1">How to use:</string>
    <string name="sun_help2"><![CDATA[
1. This is a program that provides a query for sunrise and sunset by longitude and latitude information.\n
2. Input the longitude and dimension information you need to query in the search box (the valid range of latitude and longitude is from -180 degrees to +180 degrees longitude, and the latitude is about -85 degrees to +85 degrees.)\n
3. Click the "Lookup" button to view the sunrise and sunset times at the query address.\n
4. Click the "save" icon in the menu to save the query address to the saved list.\n
5. Click "Delete" icon to delete the saved list.

    ]]></string>

    <!--Recipe-->
    <string name="save">save</string>
    <string name="remove">remove</string>
    <string name="landingTitle">landingTitle</string>
    <string name="toastVersion">Version 1.0, created by Liying Guo</string>
    <string name="toastEmpty">Please enter a Recipe</string>
    <string name="recipeInstruction">Instructions on how to use the interface:
        \n1. Enter a search term in the middle of the provided EditText.
        \n2. Click the Search button to retrieve data from the Recipe Search.
        \n3. Click the MyFavorite button to access the favorite list which recipe you saved before.
        \n4. Click on a recipe to see detailed information in a separate fragment.
        \n5. Click the Save button to add a recipe to MyFavorite in the fragment.
        \n6. To remove a recipe, select it and choose the Remove button.
        \n7. The toolbar provide access to Sun page, Receipe page, Dictionary page and Song page.
        \n8. Each page click the return will back to the previous page.
        \n9. For more help, you can contact support.</string>

    <string name="rc_Title">Recipes</string>
    <string name="rc_Details">Details</string>
    <string name="recipeTitle">Recipe Title</string>
    <string name="summary">Recipe Summary</string>
    <string name="instruction">Recipe Instructions</string>
    <string name="emptyText">No Result,please search or add item to favorite</string>
    <string name="time">time</string>



</resources>