<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/actionSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="Save"
        app:showAsAction="ifRoom|collapseActionView" />
</menu>